// Copyright 2017 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package maintpb;

message Mutation {
  GithubIssueMutation github_issue = 1;
}

message GithubIssueMutation {
  string owner = 1;  // "golang"
  string repo = 2;  // "go"
  int32 number = 3;  // 1, 2, 3... (not the ID)

  GithubUser user = 4;   // only set for new/updated issues, not new comments
  Timestamp created = 5; // only needed on new issues
  Timestamp updated = 6; // only set on updated issue text
  string body = 7; // for new or updated issue text (top post, which isn't a comment)

  repeated GithubIssueCommentMutation comment = 8;
}

message GithubIssueCommentMutation {
  int64 id = 1;
  GithubUser user = 2;
  string body = 3;
  Timestamp created = 4;
  Timestamp updated = 5;
}

message GithubUser {
  int64 id = 1;
  string login = 2;
}

// Timestamp is a copy of the protobuf well-known Timestamp.
// TODO: use the official one, after figuring out the protoc command line
// chicanery.
message Timestamp {
  // Represents seconds of UTC time since Unix epoch
  // 1970-01-01T00:00:00Z. Must be from from 0001-01-01T00:00:00Z to
  // 9999-12-31T23:59:59Z inclusive.
  int64 seconds = 1;

  // Non-negative fractions of a second at nanosecond resolution. Negative
  // second values with fractions must still have non-negative nanos values
  // that count forward in time. Must be from 0 to 999,999,999
  // inclusive.
  int32 nanos = 2;
}
